// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package user.v1;

option go_package = "github.com/oldme-git/36hour/app/user/api/user/v1";

service UserLib {
  // 用户绑定图书馆
  rpc BindLib(BindLibRequest) returns (BindLibResponse) {}
}

message BindLibRequest {
  int64 user_id = 1; // v: required
  int64 lib_id = 2; // v: required
}

message BindLibResponse {
}